tests/snapshots/render_dashboard__density_007_minimal_status_row_takes_the_dir_rows_place.snap
---
source: tests/render_dashboard.rs
assertion_line: 3709
expression: rendered
---
 dot-agent-deck — 7 agent(s)                                                   
┏ ▸ 1 ClaudeCode · orchestrator ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ● Idle ┓
┃Dir:  dot-agent-deck                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Last: 0s  Tools: 0 ┛
┌ 2 ClaudeCode · developer ──────────────────────────────────────── ● Blocked ┐
│⚠ Credits depleted (no reset)                                                │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
┌ 3 ClaudeCode · tester  orphaned ──────────────────────────────────── ● Idle ┐
│Orphaned — delegation unavailable                                            │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
┌ 4 ClaudeCode · reviewer ──────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                         │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
┌ 5 ClaudeCode · releaser ──────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                         │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
┌ 6 ClaudeCode · researcher ────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                         │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
┌ 7 ClaudeCode · documenter ────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                         │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
