tests/snapshots/render_dashboard__density_008_a_deck_too_large_for_minimal_scrolls_at_compact.snap
---
source: tests/render_dashboard.rs
assertion_line: 3733
expression: rendered
---
 dot-agent-deck — 7 agent(s)  (↓4)                                             
┏ ▸ 1 ClaudeCode · orchestrator ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ● Idle ┓
┃Dir:  dot-agent-deck                                                         ┃
┃                                                                             ┃
┃                                                                             ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Last: 0s  Tools: 0 ┛
┌ 2 ClaudeCode · developer ─────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                         │
│                                                                             │
│                                                                             │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
┌ 3 ClaudeCode · tester ────────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                         │
│                                                                             │
│                                                                             │
└───────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
