tests/snapshots/render_dashboard__grid_003_unavoidable_overflow_is_signalled.snap
---
source: tests/render_dashboard.rs
expression: rendered
---
 dot-agent-deck — 7 agent(s)  (↓5)                                                        
┏ ▸ 1 ClaudeCode · orchestrator ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ● Idle ┓
┃Dir:  dot-agent-deck                                                                    ┃
┃                                                                                        ┃
┃                                                                                        ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Last: 0s  Tools: 0 ┛
┌ 2 ClaudeCode · developer ────────────────────────────────────────────────────── ● Idle ┐
│Dir:  dot-agent-deck                                                                    │
│                                                                                        │
│                                                                                        │
└──────────────────────────────────────────────────────────────────── Last: 0s  Tools: 0 ┘
