tests/snapshots/render_dashboard__pane_008_codex_card_shows_colored_identity_badge.snap
---
source: tests/render_dashboard.rs
expression: buffer_to_color_text(&buffer)
---
[Blue/Reset]"┌" [Reset/Reset]" 1 " [LightYellow/Reset]"Codex" [Reset/Reset]" · wrapped-01 " [Blue/Reset]"──────────────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                         Last: 0s ago  Tools: 0" [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────────────────────────┘"
