tests/snapshots/render_dashboard__pane_015_wide_title_is_ellipsized_within_the_column_budget.snap
---
source: tests/render_dashboard.rs
expression: wide
---
┌ 1 ClaudeCode · 项 目 目 录 …─ ● Thinking ┐
│Dir:  example-project                 │
│Prmt: move the stats into the border  │
│                                      │
│                                      │
│                                      │
│                                      │
└───────────────── Last: 1h  Tools: 14 ┘
